--- a/web_new/catalog.html
+++ b/web_new/catalog.html
@@ -18,7 +18,8 @@
 
             <!-- Меню -->
             <nav class="menu">
-                <a href="#index.html#about-main">О нас</a>
+
+                <a href="index.html#about-main">О нас</a>
                 <a href="catalog.html">Каталог</a>
                 <a href="offers.html">Акции</a>
                 <a href="articles.html">Статьи</a>
@@ -41,65 +42,7 @@
     </header>
 
 
-    <section class="top-section">
-        <!-- Фоновое изображение -->
-        <div class="background"></div>
-
-        <!-- Логотип -->
-        <div class="logo-container">
-            <img src="pics/logo.svg" alt="Логотип" class="main-logo">
-        </div>
-
-        <!-- Текстовый блок -->
-        <div class="text-container">
-            <h1 class="title">Комфорт и удобство в один клик</h1>
-            <p class="subtitle">Забота и уют в каждом заказе. Добро пожаловать в мир комфорта!</p>
-        </div>
-
-        <!-- Кнопка -->
-        <div class="button-container">
-            <a href="order.html" class="cta-button">Как заказать?</a>
-        </div>
-    </section>
-
-
-
-
-
-    <section class="about-us", id="about-main">
-        <div class="about-container">
-            <h2 class="section-title">О нас</h2>
-            <div class="about-content">
-                <div class="about-text">
-                    <h3 class="highlight-title">Some Company Name</h3>
-                    <p class="subtitle">Ваш, комфортный</p>
-                    <p class="description">
-                        Мы - интернет-магазин товаров комфорта для пожилых людей. Наша цель - обеспечить пожилых людей всем необходимым для комфортной и безопасной жизни. Мы понимаем, что пожилые люди заслуживают особого внимания и заботы, поэтому мы с гордостью предлагаем широкий ассортимент товаров, которые помогут им наслаждаться каждым днем. Мы стремимся стать надежным партнером для пожилых людей и их близких, предоставляя высококачественные товары, специально разработанные для поддержания и повышения комфорта и безопасности. Мы хотим быть их первым выбором при поиске товаров, которые помогут им оставаться активными, здоровыми и независимыми.
-                    </p>
-                </div>
-                <div class="about-numbers-wrapper">
-                    <div class="about-numbers">
-                        <div class="number-item">
-                            <span class="number">27</span>
-                            <p class="number-desc">Лучших поставщиков из разных стран</p>
-                        </div>
-                        <div class="number-item">
-                            <span class="number">&gt;80 000</span>
-                            <p class="number-desc">Довольных покупателей в год</p>
-                        </div>
-                        <div class="number-item">
-                            <span class="number">&gt;50</span>
-                            <p class="number-desc">Полезных статей о правильном уходе за пожилыми</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-
-
-
+    
     <div class="catalog-container">
         <!-- Левый блок с фильтрами -->
         <div class="filters">
@@ -137,9 +80,7 @@
         <div class="product-catalog">
             <div class="search-bar">
                 <input type="text" placeholder="Поиск">
-                <button>
-                    <img src="pics/search-icon.svg" alt="Search" class="search-icon-inline">
-                </button>
+                <img src="pics/search-icon.svg" alt="Search" class="search-icon-inline">
                 <select id="sort-options">
                     <option value="default">По умолчанию</option>
                     <option value="discount-amount">Размер скидки</option>
@@ -150,9 +91,6 @@
             </div>
 
             <div class="product-grid">
-
-
-                <!-- Продукты будут добавляться сюда через JavaScript Но если скрипт не будет работать, то ниже товары будут отображены в любом случае-->
                 <div class="product-card">
                     <div class="product-image">
                         <img src="pics/product1.jpg" alt="Продукт 1">
@@ -234,15 +172,96 @@
                     <div class="product-image">
                         <img src="pics/product1.jpg" alt="Продукт 6">
                     </div>
-
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">3500 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 1">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">1000 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 2">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">1500 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 3">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">2000 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 4">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">2500 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 5">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">3000 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 6">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">3500 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 1">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">1000 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 2">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">1500 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 3">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">2000 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 4">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">2500 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 5">
+                    </div>
+                    <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
+                    <div class="product-price">3000 ₽</div>
+                </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="pics/product1.jpg" alt="Продукт 6">
+                    </div>
                     <div class="product-title">Подгузники-трусы Tena ProSkin Pants Normal Small, объем талии 65-85 см, 15 шт</div>
                     <div class="product-price">3500 ₽</div>
                 </div>
             </div>
         </div>
     </div>
-    <script src="script.js"></script>
-
     <div class="show-more">
         <a href="catalog.html" class="show-more-link">
             <span class="show-more-text">Показать больше</span>
@@ -250,66 +269,7 @@
         </a>
     </div>
 
-
-
-
-    <div class="useful-articles">
-        <h2 class="title">Полезные статьи</h2>
-        <div class="articles-container">
-            <div class="article">
-                <div class="rectangle">
-                    <div class="article-header">
-                        <h3 class="article-title">Как поддержать активный образ жизни в зрелом возрасте: товары, которые помогут вам оставаться молодыми и энергичными</h3>
-                        <div class="author-info">
-                            <div class="author-details">
-                                <p class="author-name">Волкова Екатерина</p>
-                                <p class="author-date">28 июля 2023</p>
-                            </div>
-                            <div class="author-photo" style="background-image: url('pics/ekaterina.jpg');"></div>
-                        </div>
-                    </div>
-                    <p class="content">Старение – неизбежный процесс, который наступает со временем. Однако, с правильным подходом и использованием специальных товаров, возраст не является преградой для активного образа жизни. В этой статье мы рассмотрим несколько товаров, которые помогут вам поддерживать молодость, энергию и независимость в зрелом возрасте...</p>
-                </div>
-            </div>
-            <div class="article">
-                <div class="rectangle">
-                    <div class="article-header">
-                        <h3 class="article-title">Пять упражнений для поддержания физической формы в зрелом возрасте</h3>
-                        <div class="author-info">
-                            <div class="author-details">
-                                <p class="author-name">Сахарова Ева1234567890123456</p>
-                                <p class="author-date">15 августа 2023</p>
-                            </div>
-                            <div class="author-photo" style="background-image: url('pics/eva.jpg');"></div>
-                        </div>
-                    </div>
-                    <p class="content">Сохранение физической формы в зрелом возрасте имеет огромное значение для здоровья и благополучия. В этой статье мы рассмотрим пять эффективных упражнений, которые помогут поддерживать физическую активность и укреплять тело в зрелом возрасте...</p>
-                </div>
-            </div>
-            <div class="article">
-                <div class="rectangle">
-                    <div class="article-header">
-                        <h3 class="article-title">Пять полезных привычек для поддержания психологического благополучия в зрелом возрасте</h3>
-                        <div class="author-info">
-                            <div class="author-details">
-                                <p class="author-name">Корнеев Олег</p>
-                                <p class="author-date">7 января 2024</p>
-                            </div>
-                            <div class="author-photo" style="background-image: url('pics/oleg.jpg');"></div>
-                        </div>
-                    </div>
-                    <p class="content">Психологическое благополучие играет важную роль в качестве жизни в зрелом возрасте. В этой статье мы рассмотрим пять полезных привычек, которые помогут поддерживать психологическое благополучие и повысить качество жизни в зрелом возрасте...</p>
-                </div>
-            </div>
-        </div>
-        <div class="show-more">
-            <a href="articles.html" class="show-more-link">
-                <span class="show-more-text">Показать все статьи</span>
-                <span class="show-more-icon"></span>
-            </a>
-        </div>
-    </div>
-
+            
 
 
 
